--- a/ScikitHEPFamilyTree.tex
+++ b/ScikitHEPFamilyTree.tex
@@ -25,7 +25,7 @@ desired/.style={dashed, thick, -latex}
 
 \node [package, user] (coffea) [below=1cm of uproot] {Coffea};
 \node [package, user] (pyhf) [left of=coffea] {PyHF};
-\node [package, user, external] (fast) [right=2 cm of coffea] {FAST-Carpender};
+\node [package, user, external] (fast) [right=2 cm of coffea] {FAST-Carpenter};
 
 \draw [existing] (bh) -- (hist);
 \draw [existing] (mplhep) -- (hist);
